--- a/Calculator/Calculator/MainWindow.xaml
+++ b/Calculator/Calculator/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Calculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="273" Width="342" Padding="0" ResizeMode="NoResize">
+        Title="Calculator" Height="263" Width="337" Padding="0" ResizeMode="NoResize" Icon="/Calculator;component/images.jpg">
     <Grid Height="235" Width="323">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="320*" />
@@ -24,6 +24,10 @@
         <Button Content="+" Height="35" HorizontalAlignment="Left" Margin="168,185,0,0" Name="button15" VerticalAlignment="Top" Width="46" />
         <ComboBox Height="35" HorizontalAlignment="Left" Margin="220,62,0,0" Name="comboBox1" VerticalAlignment="Top" Width="86" ItemsSource="{Binding}">
             <ComboBoxItem Content="A" IsEnabled="False" />
+            <ComboBoxItem Content="B" />
+            <ComboBoxItem Content="C" />
+            <ComboBoxItem Content="D" />
+            <ComboBoxItem Content="E" />
         </ComboBox>
         <Button Content="Store" Height="35" HorizontalAlignment="Left" Margin="220,103,0,0" Name="button16" VerticalAlignment="Top" Width="86" />
         <Button Content="Load" Height="35" HorizontalAlignment="Left" Margin="220,144,0,0" Name="button17" VerticalAlignment="Top" Width="86" />
