--- a/Calculator/Calculator/MainWindow.xaml
+++ b/Calculator/Calculator/MainWindow.xaml
@@ -6,7 +6,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="320*" />
         </Grid.ColumnDefinitions>
-        <Button Content="1" Height="35" HorizontalAlignment="Left" Margin="12,62,0,0" Name="Number1" VerticalAlignment="Top" Width="46" Click="button1_Click" />
+        <Button Content="1" Height="35" HorizontalAlignment="Left" Margin="12,62,0,0" Name="Number1" VerticalAlignment="Top" Width="46" Click="button1_Click" DataContext="{Binding}" />
         <TextBox Height="36" HorizontalAlignment="Left" Margin="12,12,0,0" Name="display" VerticalAlignment="Top" Width="294" Text="0" TextAlignment="Right" FontSize="24" FontFamily="Courier New" Padding="1,5,5,1" />
         <Button Content="2" Height="35" HorizontalAlignment="Left" Margin="64,62,0,0" Name="Number2" VerticalAlignment="Top" Width="46" Click="Number2_Click" />
         <Button Content="3" Height="35" HorizontalAlignment="Left" Margin="116,62,0,0" Name="Number3" VerticalAlignment="Top" Width="46" Click="Number3_Click" />
@@ -32,6 +32,6 @@
         <Button Content="Store" Height="35" HorizontalAlignment="Left" Margin="220,103,0,0" Name="StoreButton" VerticalAlignment="Top" Width="86" Click="StoreButton_Click" />
         <Button Content="Load" Height="35" HorizontalAlignment="Left" Margin="220,0,0,56" Name="LoadButton" VerticalAlignment="Bottom" Width="86" Click="LoadButton_Click" />
         <Button Content="=" Height="35" HorizontalAlignment="Left" Margin="220,185,0,0" Name="EqualButton" VerticalAlignment="Top" Width="86" Click="EqualButton_Click" />
-        <Button Content="C" Height="35" HorizontalAlignment="Left" Margin="116,185,0,0" Name="DeleteButton" VerticalAlignment="Top" Width="46" Click="DeleteButton_Click" />
+        <Button Content="Del" Height="35" HorizontalAlignment="Left" Margin="116,185,0,0" Name="DeleteButton" VerticalAlignment="Top" Width="46" Click="DeleteButton_Click" />
     </Grid>
 </Window>
